新增trt-rag模块,FFM封装