@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.3.20'
 }
 
 group = 'com.erling'
@@ -11,6 +12,8 @@ repositories {
 }
 
 dependencies {
+
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
 
     implementation 'net.java.dev.jna:jna:5.14.0'
     implementation 'com.moandjiezana.toml:toml4j:0.7.2'
@@ -25,5 +28,16 @@ test {
     useJUnitPlatform()
 }
 kotlin {
-    jvmToolchain(21)
+    compilerOptions {
+        // Kotlin 必须开启预览（关键！）
+        freeCompilerArgs.add("-Xenable-preview")
+    }
+    jvmToolchain(gradle.ext.jvm_version)
+    println "Core to build with JVM version: ${gradle.ext.jvm_version}"
+}
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
 }
