@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '2.3.20'
+    id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.kotlin.plugin.lombok' version '2.3.20'   // 添加 Kotlin Lombok 插件
     id 'org.jetbrains.kotlin.plugin.serialization' version '2.3.20'
 
@@ -32,5 +32,12 @@ test {
     useJUnitPlatform()
 }
 kotlin {
-    jvmToolchain(21)
+    jvmToolchain(gradle.ext.jvm_version)
+    println "LLM to build with JVM version: ${gradle.ext.jvm_version}"
+}
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
 }
