@@ -13,10 +13,15 @@ repositories {
 dependencies {
     implementation project(':jdz-core')
     implementation project(':jdz-llama.cpp')
+    implementation project(':jdz-plugins')
+    implementation project(':jdz-trt-rag')
 
     implementation 'net.java.dev.jna:jna:5.14.0'
     compileOnly 'org.projectlombok:lombok:1.18.30' // 编译时仅需接口，不打包
     annotationProcessor 'org.projectlombok:lombok:1.18.30' // 编译期生成代码的处理器
+
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 
     implementation 'dev.langchain4j:langchain4j-open-ai:1.0.0-beta3'
     implementation 'dev.langchain4j:langchain4j:1.0.0-beta3'
@@ -31,4 +36,20 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+kotlin {
+//    jvmTarget = "21" // 根据你的Java版本调整
+    compilerOptions {
+        // Kotlin 必须开启预览（关键！）
+        freeCompilerArgs.add("-Xenable-preview")
+    }
+
+    jvmToolchain(gradle.ext.jvm_version)
+    println "Test to build with JVM version: ${gradle.ext.jvm_version}"
+}
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
 }
